# altrightclick

./: .clang-format  .gitignore  AltLeftClickToRight.cpp  CMakeLists.txt  CMakePresets.json  CPPLINT.cfg  README.md  agents.md  compile.bat  config.example.ini  coverage.xml  cpplint.out  readme.md
.github/workflows/: auto-format.yml  build.yml  ci.yml  coverage.yml  format.yml  lint.yml  release.yml  scoop-update.yml  test.yml
docs/: Doxyfile
include/arc/: app.h  config.h  hook.h  log.h  persistence.h  service.h  singleton.h  task.h  tray.h
res/: altrightclick.rc.in
scoop/: altrightclick.json
scripts/: clean.bat  compile.bat
src/: app.cpp  config.cpp  hook.cpp  icon_gen.cpp  log.cpp  main.cpp  persistence.cpp  service.cpp  singleton.cpp  task.cpp  tray.cpp  version.h.in
tests/: config_edge_test.cpp  config_test.cpp  icon_test.cpp
